implement upsert logic and removed redundant DailyLogType - Added handler for ConstraintViolationException to correctly return 400 for parameter validation failures. - Enforced a maximum 90-day retrieval limit for daily logs